“修改兼容性

--- a/contactUs.html
+++ b/contactUs.html
@@ -21,6 +21,11 @@
 			
 			.pi-main {
 				padding: 0 .13rem;
+				display: -webkit-box;
+				display: -ms-flexbox;
+				display: flex;
+				flex-direction: column;
+				-webkit-flex: 1;
 				flex: 1;
 			}
 			
@@ -30,7 +35,8 @@
 				background: #FFFFFF;
 				box-shadow: 0px 0px 15px #929292;
 				padding: .3rem .2rem .2rem .2rem;
-				height: 100%;
+				-webkit-flex: 1;
+				flex: 1;
 			}
 			
 			.pi-text>p {
