--- a/goPark.html
+++ b/goPark.html
@@ -18,9 +18,10 @@
 				-webkit-box-align: center;
 				-ms-flex-align: center;
 				align-items: center;
-				-webkit-box-pack: center;
+				/*-webkit-box-pack: center;
 				-ms-flex-pack: center;
-				justify-content: center;
+				justify-content: center;*/
+				position: relative;
 			}
 			
 			.goPark>img {
@@ -35,6 +36,7 @@
 			.gp-menu {
 				width: 60%;
 				height: 70%;
+				margin: 0 auto;
 				display: -webkit-box;
 				display: -ms-flexbox;
 				display: flex;
@@ -81,7 +83,6 @@
 		</style>
 	</head>
 	<body>
-		<div id="app">
 			<div class="goPark"><img  src="./img/tpk.jpg">
 				<div class="gp-menu">
 					<div class="gp-m">
@@ -110,6 +111,5 @@
 					</div>
 				</div>
 			</div>
-		</div>
 	</body>
 </html>
