--- a/vtPark.html
+++ b/vtPark.html
@@ -19,9 +19,9 @@
 				-webkit-box-align: center;
 				-ms-flex-align: center;
 				align-items: center;
-				-webkit-box-pack: center;
+				/*-webkit-box-pack: center;
 				-ms-flex-pack: center;
-				justify-content: center;
+				justify-content: center;*/
 			}
 			
 			.goPark>img {
@@ -36,6 +36,7 @@
 			.gp-menu {
 				width: 60%;
 				height: 70%;
+				margin: 0 auto;
 				display: -webkit-box;
 				display: -ms-flexbox;
 				display: flex;
